updated minified version of the js

--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,7 @@
 
 	<head>
 		<script type='text/javascript' src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.2.min.js'></script>
-		<script type='text/javascript' src='jquery.listDropDown.js'></script>
+		<script type='text/javascript' src='jquery.listDropDown.min.js'></script>
 
 		<!-- DEMO JAVASCRIPT -->
 		<script type='text/javascript'>
