updated js to include the data-selected and data-null attributes

--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,7 @@
 
 	<head>
 		<script type='text/javascript' src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.2.min.js'></script>
-		<script type='text/javascript' src='jquery.listDropDown.min.js'></script>
+		<script type='text/javascript' src='jquery.listDropDown.js'></script>
 
 		<!-- DEMO JAVASCRIPT -->
 		<script type='text/javascript'>
@@ -18,7 +18,7 @@
 	<body>
 		Try shrinking the screen down:
 
-		<ul class='toDropDown'>
+		<ul class='toDropDown' data-selected='0' data-null='-- select an item --'>
 			<li data-value='one'>item one</li>
 			<li data-value='two'>item two</li>
 			<li data-value='three'>item three</li>
